# fave_protocol

./: .gitignore  Anchor.toml  Cargo.toml  README.md  fave_protocol.ts  lib.rs  package-lock.json  package.json  tsconfig.json
programs/fave_protocol/: Cargo.toml
programs/fave_protocol/src/: lib.rs
scripts/: create_fave_mainnet.mjs  create_fave_mainnet_v2.mjs  create_fave_token.mjs  create_membership.mjs  create_membership.ts  set_token_metadata.mjs  token-metadata.json  upload_logo.mjs  upload_metadata.mjs
sdk/: package-lock.json  package.json  tsconfig.json
sdk/idl/: fave_protocol.json
sdk/src/: index.ts
tests/: fave_protocol.ts
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  ContractPage.tsx  CreateMembership.tsx  CreatorPage.tsx  CreatorsPage.tsx  DashboardPage.tsx  LandingPage.tsx  LangSwitcher.tsx  Nav.tsx  ProfilePage.tsx  api.ts  constants.ts  idl.ts  main.tsx  styles.css  useS3Upload.ts
web/src/i18n/: index.ts
web/src/i18n/locales/: en.json  en.ts  fr.json  fr.ts
